--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,13 @@ services:
     container_name: "Flask_App"
     ports:
       - "5000:5000"
+
+  db:
+    image: mysql:5.7
+    container_name: "MySQL_Database10"
+    ports:
+      - "32000:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - ./db:/docker-entrypoint-initdb.d/:ro
